GN-31 Refactored game mapper | Added Build entity