@@ -1,8 +1,6 @@
 package com.gamenest.controller;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.kohsuke.github.GHAppInstallation;
@@ -27,7 +25,10 @@ import lombok.extern.slf4j.Slf4j;
 
 import com.gamenest.config.github.JwtTokenUtil;
 import com.gamenest.dto.game.GameRequest;
+import com.gamenest.dto.repo.GhRepositoryRequest;
 import com.gamenest.dto.user.UserRequest;
+import com.gamenest.exception.InvalidDataException;
+import com.gamenest.service.interfaces.GameService;
 import com.gamenest.service.interfaces.UserService;
 
 /**
@@ -42,81 +43,88 @@ import com.gamenest.service.interfaces.UserService;
 
 public class UserController {
 
-    private final UserService userService;
-    private final JwtTokenUtil jwtTokenUtil;
+	private final UserService userService;
+	private final GameService gameService;
+	private final JwtTokenUtil jwtTokenUtil;
 
-    @Value("${github.webhook.app-id}")
-    private String applicationId;
+	@Value("${github.webhook.app-id}")
+	private String applicationId;
 
-    @Operation(summary = "Get user repositories", description = "Retrieves information about the user's github reposiories.")
-    @GetMapping("/repositories")
-    public ResponseEntity<List<Map<String, Object>>> getUserRepositories() throws Exception {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        UserRequest user = userService.getByUserName(username);
+	@Operation(summary = "Get user repositories", description = "Retrieves information about the user's github reposiories.")
+	@GetMapping("/repositories")
+	public ResponseEntity<List<GhRepositoryRequest>> getUserRepositories() throws Exception {
+		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+		String username = authentication.getName();
+		UserRequest user = userService.getByUserName(username);
 
-        String jwtToken = jwtTokenUtil.createJWT(applicationId, 60000);
+		if (user.getInstallationId() == null) {
+			throw new InvalidDataException("User doesn't have a github installation Id");
+		}
 
-        GitHub gitHubApp = new GitHubBuilder().withJwtToken(jwtToken).build();
+		String jwtToken = jwtTokenUtil.createJWT(applicationId, 60000);
 
-        GHAppInstallation appInstallation = gitHubApp.getApp().getInstallationById(user.getInstallationId());
-        GHAppInstallationToken appInstallationToken = appInstallation.createToken().create();
+		GitHub gitHubApp = new GitHubBuilder().withJwtToken(jwtToken).build();
 
-        GitHub installationClient = new GitHubBuilder().withAppInstallationToken(appInstallationToken.getToken())
-                .build();
+		GHAppInstallation appInstallation = gitHubApp.getApp().getInstallationById(user.getInstallationId());
+		GHAppInstallationToken appInstallationToken = appInstallation.createToken().create();
 
-        log.info("Github app token: {}", appInstallationToken.getToken());
+		GitHub installationClient = new GitHubBuilder().withAppInstallationToken(appInstallationToken.getToken())
+				.build();
 
-        List<GHRepository> repositories = installationClient.getInstallation().listRepositories().toList();
+		log.info("Github app token: {}", appInstallationToken.getToken());
 
-        List<Map<String, Object>> simpleRepos = repositories.stream()
-                .map(repo -> {
-                    Map<String, Object> map = new HashMap<>();
-                    map.put("id", repo.getId());
-                    map.put("name", repo.getName());
-                    map.put("fullName", repo.getFullName());
-                    map.put("htmlUrl", repo.getHtmlUrl());
-                    map.put("language", repo.getLanguage());
-                    return map;
-                })
-                .collect(Collectors.toList());
+		List<GHRepository> ghRepositories = installationClient.getInstallation().listRepositories().toList();
 
-        return ResponseEntity.ok(simpleRepos);
-    }
+		List<GhRepositoryRequest> repositories = ghRepositories.stream()
+				.map(repo -> {
+					return GhRepositoryRequest.builder()
+							.ghId(repo.getId())
+							.name(repo.getName())
+							.fullName(repo.getFullName())
+							.htmlUrl(repo.getHtmlUrl().toString())
+							.language(repo.getLanguage())
+							.privateRepository(repo.isPrivate())
+							.build();
+				})
+				.collect(Collectors.toList());
 
-    @Operation(summary = "Get all users", description = "Retrieves a list of all users with their roles.")
-    public ResponseEntity<List<UserRequest>> getAllUsers() {
-        List<UserRequest> users = userService.getAllUsers();
-        return ResponseEntity.ok(users);
-    }
+		return ResponseEntity.ok(repositories);
+	}
 
-    @Operation(summary = "Get current user info", description = "Retrieves information about the currently authenticated user.")
-    @GetMapping("/@me")
-    public ResponseEntity<UserRequest> getUserInfo() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        UserRequest user = userService.getByUserName(username);
-        return ResponseEntity.ok(user);
-    }
+	@Operation(summary = "Get all users", description = "Retrieves a list of all users with their roles.")
+	public ResponseEntity<List<UserRequest>> getAllUsers() {
+		List<UserRequest> users = userService.getAllUsers();
+		return ResponseEntity.ok(users);
+	}
 
-    @Operation(summary = "Update user installation id", description = "Retrieves information about the currently authenticated user.")
-    @PostMapping("/installation/{installationId}")
-    public ResponseEntity<UserRequest> updateUserInstallation(@PathVariable Long installationId) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
+	@Operation(summary = "Get current user info", description = "Retrieves information about the currently authenticated user.")
+	@GetMapping("/@me")
+	public ResponseEntity<UserRequest> getUserInfo() {
+		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+		String username = authentication.getName();
+		UserRequest user = userService.getByUserName(username);
+		return ResponseEntity.ok(user);
+	}
 
-        UserRequest user = userService.updateUserInstallation(installationId, username);
-        return ResponseEntity.ok(user);
-    }
+	@Operation(summary = "Update user installation id", description = "Retrieves information about the currently authenticated user.")
+	@PostMapping("/installation/{installationId}")
+	public ResponseEntity<UserRequest> updateUserInstallation(@PathVariable Long installationId) {
+		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+		String username = authentication.getName();
 
-    @Operation(summary = "Get current user's games", description = "Retrieves all games belonging to the authenticated user.")
-    @GetMapping("/games")
-    public ResponseEntity<List<GameRequest>> getUserGames() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
+		UserRequest user = userService.updateUserInstallation(installationId, username);
+		return ResponseEntity.ok(user);
+	}
 
-        List<GameRequest> userGames = userService.getUserGames(username);
-        return ResponseEntity.ok(userGames);
-    }
+	@Operation(summary = "Get current user's games", description = "Retrieves all games belonging to the authenticated user.")
+	@GetMapping("/games")
+	public ResponseEntity<List<GameRequest>> getUserGames() {
+		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+		String username = authentication.getName();
+
+		List<GameRequest> userGames = gameService.getUserGames(username, "repository", "category", "tags",
+				"last-build");
+		return ResponseEntity.ok(userGames);
+	}
 
 }
